add tooling functionality, unfinished
- further implement gwt ui
- starts separating swing from web basics
- implements tooling
   - a lot of wrongs still there
   - especially object drawing still has a bug were preview lines are not deleted